--- a/Techtree/Techtree.csproj
+++ b/Techtree/Techtree.csproj
@@ -14,6 +14,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Include="wwwroot\lib\jquery-ui-1.12.1.custom\external\jquery\jquery.js" />
+	  <None Include="wwwroot\lib\jquery-ui-1.12.1.custom\jquery-ui.js" />
+	  <None Include="wwwroot\lib\jquery-ui-1.12.1.custom\jquery-ui.min.js" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.11" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.11" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.11" />
